[package]
name = "entity-esdt-meta"
version = "1.0.0"
authors = ["Micha Vie <micha@freeiam.com>", "Superciety <hello@superciety.com>"]
edition = "2018"
publish = false

[dependencies.entity-esdt]
path = ".."

[dependencies.elrond-wasm]
version = "0.33.1"

[dependencies.elrond-wasm-debug]
version = "0.33.1"
